# rustyvulkan

./: .envrc  .gitignore  Cargo.toml  default.nix  devbox.json  flake.nix  refactoring.md  rust-toolchain.toml  shell.nix
assets/shaders/: shader.frag  shader.vert
flakes/vulkan-sdk/: flake.nix
sphere/: shell.nix
sphere/src/: main.rs
sphere/src/shaders/: main.fs  main.vs
sphere/src/sphere/: main.rs
src/: camera.rs  core.rs  game.rs  gameobject.rs  main.rs  math.rs  memory.rs  platform.rs  renderer.rs  resources.rs  scene.rs
src/core/: mod.rs
src/game/states/: mod.rs
src/math/: mod.rs  ordering.rs  transform.rs
src/platform/: input.rs  mod.rs  window.rs
src/renderer/: buffer.rs  context.rs  device.rs  mod.rs  pipeline.rs  render_loop.rs  swapchain.rs  vulkan.rs
src/resources/: texture.rs
src/scene/: camera.rs  gameobject.rs
teapot/teapot/: Cargo.toml
teapot/teapot/src/: main.rs
teapot/teapot/src/vulkan/: vulkan_data.rs
tryangle/: .gitignore  README.md
tryangle/src/: main.rs
tryangle/src/tryangle/: main.rs
trypot/: Cargo.toml  shell.nix
trypot/assets/shaders/: shader.frag
trypot/src/: camera.rs  gameobject.rs  main.rs  transform.rs
