[package]
name = "rustyvulkan"
version = "0.1.0"
authors = [ "Adrian <adrian.niewiadomski@rwth-aachen.de>", "GRBurst <GRBurst@protonmail.com>" ]
publish = false

[dependencies]
vulkano = "0.32.0"
vulkano-win = "0.32.0"
vulkano-util = "0.32.0"
vulkano-shaders = "0.32.0"
winit = "0.27"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
cgmath = "0.18"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8.4"
glium = "0.32.1"
